@@ -1,3 +1,3 @@
 DOS2UNIX_VERSION = 5.1.2-beta2
 DOS2UNIX_VERSION_SHORT = 512b2
-DOS2UNIX_DATE = 2010-11-22
+DOS2UNIX_DATE = 2010-12-09
